# bazel_pyproject

./: .bazelrc  MODULE.bazel  README.md  bazel-bazel_pyproject  bazel-bin  bazel-out  bazel-testlogs
protos/: BUILD.bazel  simple_proto.proto
python/: BUILD.bazel  README.md  __init__.py  main.py  pyproject.toml  setup.py
python/my_xla_project_experiment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/protos/: __init__.py
python/xla/: __init__.py
