[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "my-xla-project-experiment"  # Must be unique on PyPI
version = "0.1.12"
description = "XLA-powered project with shared Bazel protos"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "protobuf>=6.32.1",
    "numpy",
]


[tool.setuptools]
# Force setuptools to look for these specific folders
package-dir = {"" = "."}

[tool.setuptools.package-data]
# Ensure the generated python files are treated as data if they aren't standard .py
"*" = ["*.py", "*.pyi"]


